# kodi_mcp_server

./: .env.example  .env.test  .gitignore  AGENTS.md  BOOTSTRAP.md  CURRENT_STATE.md  HEARTBEAT.md  IDENTITY.md  PROJECT.md  README.md  SKILLS.md  SOUL.md  TOOLS.md  USER.md  endpoint-alignment-analysis.json  kodi-cli  pyproject.toml  pytest.ini  requirements-dev.txt
.openclaw/: workspace-state.json
cli/: README.md  kodi_cli.py  pyproject.toml  test_cli.py
project-config/: CURRENT_STATE.md  PROJECT.md  REPO_WORKFLOW_RUNBOOK.md
repo-addon/repository.kodi-mcp-0.1.0/: LICENSE  README.md  addon.xml  repository.xml  service.py
scripts/: build.sh  build_service_addon.py  build_test_addon.py  deploy.sh  kodi_cli.py  mcp_remote_smoke.py  publish_repository_addon.py  pyproject.toml  repo_server.py  smoke_bridge_flow.py
service.kodi_mcp/: README.md  addon.xml  start.py
src/: kodi_cli.py
src/kodi_mcp_mcp/: server.py  server_core.py
src/kodi_mcp_server/: __init__.py  addon_xml.py  app_shared.py  artifact_store.py  artifacts.py  composition.py  config.py  dev_loop_artifacts.py  http_app.py  kodi_apply.py  main.py  managed_addons.py  mcp_app.py  (+8 more)
templates/: addon.xml  repository.xml
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_endpoints.py  test_http_errors.py  test_http_jsonrpc.py  test_initial_install_hint.py  test_mcp_artifact_tools.py  test_mcp_gui_tools.py  test_mcp_player_tools.py  test_milestone_a_bridge_contract.py  test_models.py  test_post_endpoints.py  test_publish_artifact_endpoint.py  test_screenshot_store.py  test_service_ops.py
(+20 files in other folders)
