[project]
name = "kodi_mcp_server"
version = "0.1.0"
description = "MCP server for Kodi integration"
authors = [{name = "kodi_mcp"}]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=15.0.0",
    "mcp>=1.27.0",
]

[project.scripts]
kodi-mcp-server = "kodi_mcp_server.main:main"
kodi-mcp = "kodi_mcp_mcp.server:main"
kodi-mcp-wrapper = "kodi_mcp_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["kodi_mcp_server*", "kodi_mcp_mcp*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
