[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kodi_cli"
version = "0.1.0"
description = "CLI wrapper for Kodi MCP Server"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
kodi-cli = "kodi_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kodi_cli*"]
